@@ -1,3 +1,6 @@
+2009-08-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ test/unit/test_cancel_query.cxx:
+ - Added test for cancel_query, thanks Don Madden.
 2009-08-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
  include/pqxx/connection_base.hxx, src/connection_base.cxx:
  - Made cancel_query public, thanks Don Madden.
